--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: "Galerie Alpine"
 description: "Fine Art in the heart of the Alps"
-baseurl: "https://www.galeriealpine.github.io"
+baseurl: "https://galeriealpine.github.io"
 future: false
 markdown: kramdown
 permalink: pretty
